# simple-digital-synth

./: .gdbinit  .gitignore  CMakeLists.txt  Cargo.toml  Embed.toml  README.md  openocd.cfg
.cargo/: config.toml
archive/cpp/: CMakeLists.txt
archive/cpp/cmake/: toolchain-arm-none-eabi.cmake
archive/cpp/include/: core_debug.h  stm32_assert.h
cmake/: toolchain-arm-none-eabi.cmake
cpp/: CMakeLists.txt
cpp/include/: stm32f3xx_hal_conf.h
cpp/src/: tim6_timebase.c
crates/dsp/: Cargo.toml  Embed.toml  _build.rs  _memory_example.x  memory.x
crates/dsp/.cargo/: config.toml
crates/dsp/docs/: tmp.md
crates/dsp/src/: adsr.rs  audio.rs  consts.rs  filter.rs  hsem.rs  i2c_scanner.rs  lcd.rs  lib.rs  main.rs  midi.rs  oscillator.rs  state.rs  voice.rs
crates/interfaces/: Cargo.toml  Embed.toml  memory.x
crates/interfaces/.cargo/: config.toml
crates/interfaces/src/: encoder.rs  lib.rs  main.rs
crates/mcu_common/: Cargo.toml
crates/mcu_common/.cargo/: config.toml
crates/mcu_common/src/: hsem.rs  lib.rs
crates/midi_parser/: Cargo.toml
crates/midi_parser/.cargo/: config.toml
crates/midi_parser/src/: consts.rs  lib.rs  parser.rs  tables.rs
crates/synth/: Cargo.toml  Embed.toml
crates/synth/src/: adsr.rs  consts.rs  encoder.rs  filter.rs  main.rs  oscillator.rs  state.rs  voice.rs
include/: stm32_assert.h  stm32f3xx_hal_conf.h
rust/: Cargo.toml  memory.x
rust/.cargo/: config.toml
rust/docs/: tmp.md
rust/src/: consts.rs  encoder.rs  filter.rs  main.rs  midi.rs  oscillator.rs  state.rs  tables.rs
rust/src/tables/: midi_to_freq.rs  sine.rs
src/: main.cpp
src/stm32/: stm32_def.c  stm32f3xx_hal_timebase_tim.c
stm32/: flash.ps1  open-ocd.cfg  openocd-reset.cfg  stm32f303vc.ld
