[package]
name = "simple_digital_synth"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
stm32f3xx-hal = { version = "0.9.2", features = ["stm32f303xc"] }
panic-halt = "0.2.0"

[profile.dev]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
