[package]
name = "simple_digital_synth"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc", "rt"] }
# panic-halt = "1.0"
libm = "0.2.15"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

[profile.dev]
codegen-units = 1
debug = true
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[[bin]]
name = "main"
path = "src/main.rs"
