[package]
name = "dsp"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
mcu_common = { path = "../mcu_common", features = ["cm7", "single-core"] }
# critical-section = "1.2"
libm = "0.2.15"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
heapless = "0.8.0"
embassy-stm32 = { version = "0.2.0", features = [
    "rt",
    "stm32h755zi-cm7",
    "unstable-pac",
    "exti",
] }

[profile.dev]
codegen-units = 1
debug = true
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[features]
default = []

ra = []
