[package]
name = "interfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["stm32h755zi-cm4", "time-driver-any", "exti", "memory-x"] }
embassy-time = { version = "0.4.0" }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
midi_parser = { path = "../midi_parser", default-features = false }
heapless = "0.8.0"

[[bin]]
name = "main"
path = "src/main.rs"
harness = false
test = false
