[package]
name = "interfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [
    "stm32h755zi-cm4",
    "exti",
] }
mcu_common = { path = "../mcu_common", features = ["cm4"] }

cortex-m = { version = "0.7.7", features = ["critical-section"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
midi_parser = { path = "../midi_parser" }
heapless = "0.8.0"

[profile.dev]
codegen-units = 1
debug = true
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[features]
default = []

ra = []
