[package]
name = "interfaces"
version = "0.1.0"
edition = "2024"

[dependencies]
mcu_common = { path = "../mcu_common", features = ["cm4"] }

cortex-m = { version = "0.7.7", features = ["critical-section"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2"
# embassy-stm32 = { version = "0.2.0", features = ["stm32h755zi-cm4", "unstable-pac"] }
defmt = { version = "1.0", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1.1", default-features = false, features = ["rtt"] }
# defmt-rtt = "1.0"
panic-halt = { version = "1.0" }
# panic-probe = { version = "0.3", features = ["print-defmt"] }
midi_parser = { path = "../midi_parser" }
heapless = "0.8.0"
rtic = { version = "2.0", features = ["thumbv7-backend"] }
# stm32h7xx-hal = { version = "0.16", features = [
#     "defmt",
#     # It doesn't have a flag for H755 yet, thus this set of features
#     "cm4",
#     "device-selected",
#     "dsi",
#     "revision_v",
#     "rm0399",
#     "smps",
#     "stm32h7/stm32h747cm4"
# ] }
# Cannot bump version due to stm32h7xx-hal being dependant on 0.15.2
# stm32h7 = {version = "0.15.0", features = ["stm32h747cm4"]}

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

[features]
default = []

ra = []
