[package]
name = "mcu_common"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1.2", features = ["restore-state-u32"] }
embassy-stm32 = {version = "0.2.0", optional = true, features = ["rt"]}

[profile.dev]
codegen-units = 1
debug = true
lto = false
opt-level = 0

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[features]
default = []

cm4 = ["dep:embassy-stm32", "embassy-stm32/stm32h755zi-cm4"]
cm7 = ["dep:embassy-stm32", "embassy-stm32/stm32h755zi-cm7"]

ra = ["cm7"]
