[package]
name = "simple_digital_synth"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc", "rt"] }
# panic-halt = "1.0"
libm = "0.2.15"
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
midi_parser = { path = "../midi_parser" }

[[bin]]
name = "main"
path = "src/main.rs"
harness = false
test = false
